# gamedev

./: CMakeLists.txt  README.md
work_1/: CMakeLists.txt
work_1/1/: CMakeLists.txt  main.cxx  version.cxx  version.hxx
work_1/2/: CMakeLists.txt
work_1/2/lib/: CMakeLists.txt  lib.cpp  lib.h
work_1/2/src/: CMakeLists.txt  main.cpp
work_2/: CMakeLists.txt  main.cxx
work_2/1-sdl-static/: CMakeLists.txt
work_2/2-sdl-dynamic/: CMakeLists.txt
